[tool.poetry]
name = "hello"
version = "1"
description = "hello"
authors = ["hello <hello@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.18.0"  # upgrade along botocore
botocore = "^1.21.0"  # upgrade with boto3
celery = {version = "5.2.6", extras = ["redis", "yaml"]}
certifi = "^2020.11.8"
cron-descriptor = "1.2.10"
cryptography = "^3.4.7"
datadog = "0.28.0"
django-crispy-forms = "^1.9.2"
django-filter = "^2.4.0"
django-guardian = "^2.3.0"
django-phonenumber-field = "1.1.0"
django-webpack-loader = "0.6.0"
django = "~3.2.13"
djangorestframework-csv = "2.0.0"
djangorestframework = "^3.12.2"
drf-yasg = "^1.20.0"
duo-client = "4.2.3"
elasticsearch-dsl = "^7.4.0"
elasticsearch = "7.10"
google-auth = "1.2.1"
isodate = "0.6.0"
jira = "2.0.0"
kombu = "5.2.4"  # update when updating celery version
ldap3 = "2.6.1"
mypy_extensions = "^0.4.1"
newrelic = "4.2.0.100"
psycopg2-binary = "2.9.3"
pwgen = "0.8.2.post0"
pyasn1-modules = "0.1.5"
pyasn1 = "0.3.7"
pysaml2 = "^7.0.1"
python-dateutil = "~2.8.1"
pyyaml = "^5.4.1"
redis = "^4.1.3"
requests = "2.26.0"
simplejson = "3.17.0"
typing-extensions = "~3.10"
urllib3 = "~1.26.5"
vine = "5.0.0"
whitenoise = "~5.2.0"
xmltodict = "0.11.0"
django-simple-history = "^2.12.0"
defusedxml = "^0.6.0"
pycountry = "^20.7.3"
pycountry-convert = "^0.7.2"
requests-aws4auth = "^1.1.1"
Twisted = "^22.4.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^2.2"
mypy = "^0.782"
flake8 = "^3.8.3"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.3"
requests-mock = "^1.8.0"
pytest = "^6.0.1"
pytest-django = "^3.9.0"
pytest-cov = "^2.10.1"
cobertura-clover-transform = "^1.1.4"
faker = "^4.1.2"
fakeredis = ">=1.2.1"
factory-boy = "3.0.1"
black = "22.3.0"
testfixtures = "6.14.0"
celery = {version = "^5.2.6", extras = ["pytest"]}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
